perf(menu): 优化菜单权限查询性能
- 引入 SysRoleMenuService 服务进行角色菜单关联查询
- 将原有的多表 JOIN 查询拆分为三个步骤提高查询效率
- 第一步根据角色 CODE 查询有效角色 ID（走 SYS_ROLE.CODE 索引）
- 第二步通过关联表查询菜单 ID（走 SYS_ROLE_MENU.ROLE_ID 索引）
- 第三步主键批量查询菜单数据（走主键索引，天然无重复）
- 为超级管理员角色查询添加早期返回逻辑
- 在路由菜单查询中实现相同的分步查询优化策略
- 移除不必要的 LEFT JOIN 操作减少数据库压力
- 添加空集合检查避免无效查询操作